# src/plugin/api/routes/edit/__init__.py
@@ -1,9 +1,7 @@
-from .edit_replace_line import replace_line
-from .edit_insert_line import insert_line
-from .edit_file_view import file_view
+from .file_edit import file_edit
+from .file_view import file_view
 
 edit_routes = [
-    replace_line,
-    insert_line,
+    file_edit,
     file_view,
 ]
